--- a/.github/workflows/Default23.yml
+++ b/.github/workflows/Default23.yml
@@ -32,7 +32,7 @@ concurrency:
 env:
   DL_CACHE_VERSION: v1
   ARTIFACT_RETENTION_DAYS: 7
-  CONFIG_FILE: build.config
+  CONFIG_FILE: ax80-v1.config
   REMOTE_REPOSITORY: openwrt/openwrt
   REMOTE_REF: main
   RELEASE_PREFIX: ax80-v1
@@ -189,6 +189,16 @@ jobs:
           restore-keys: |
             ccache-${{ runner.os }}-ax80-v1-
 
+      - name: Restore toolchain cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            openwrt/staging_dir/toolchain-*
+            openwrt/build_dir/toolchain-*
+          key: toolchain-${{ runner.os }}-ax80-v1-${{ hashFiles('builder/ax80-v1.config') }}-${{ steps.upstream.outputs.pr_number || 'main' }}
+          restore-keys: |
+            toolchain-${{ runner.os }}-ax80-v1-
+
       # ===================================
       # 4. ОБНОВЛЕНИЕ FEEDS
       # ===================================
@@ -198,36 +208,60 @@ jobs:
           cd openwrt
           
           echo "=== Обновление feeds ==="
+
+          # Configure git for better reliability
+          git config --global http.postBuffer 1048576000
+          git config --global http.lowSpeedLimit 1000
+          git config --global http.lowSpeedTime 300
+          git config --global core.compression 0
+          git config --global protocol.version 2
+          
           echo "Диск перед обновлением:"
           df -h .
-          
-          # Проверяем, тестируем ли мы PR (может влиять на feeds)
-          if [ -n "${{ steps.upstream.outputs.pr_number }}" ]; then
-            echo "⚠️  Тестируем PR, принудительно обновляем feeds..."
-            rm -f .feeds_updated
-          fi
           
           # Быстрое обновление если есть кэш
           if [ -f .feeds_updated ]; then
             echo "Используем кэшированные feeds, быстрое обновление..."
-            timeout 300 ./scripts/feeds update -a || true
-          else
+            if ! timeout 300 ./scripts/feeds update -a; then
+              echo "::warning::Быстрое обновление не удалось, пробуем полное..."
+              rm -f .feeds_updated
+            fi
+          fi
+          
+          if [ ! -f .feeds_updated ]; then
             echo "Полное обновление feeds..."
+            
+            # Простое обновление feeds с обработкой ошибок
             for attempt in {1..3}; do
-              echo "Попытка $attempt/3"
-              if timeout 400 ./scripts/feeds update -a; then
+              echo "Попытка обновления $attempt/3"
+              
+              if ./scripts/feeds update -a; then
                 touch .feeds_updated
+                echo "✓ Feeds обновлены успешно"
                 break
               elif [ $attempt -eq 3 ]; then
-                echo "::error::Не удалось обновить feeds"
+                echo "::error::Не удалось обновить feeds после 3 попыток"
                 exit 1
               fi
+              
               sleep 10
             done
           fi
           
           echo "=== Установка feeds ==="
-          ./scripts/feeds install -a
+          # Установка feeds с обработкой ошибок
+          for attempt in {1..2}; do
+            if ./scripts/feeds install -a; then
+              echo "✓ Feeds установлены успешно"
+              break
+            elif [ $attempt -eq 2 ]; then
+              echo "::error::Не удалось установить feeds"
+              exit 1
+            else
+              echo "Повторная попытка установки feeds..."
+              sleep 5
+            fi
+          done
           
           echo "Диск после обновления:"
           df -h .
@@ -242,18 +276,14 @@ jobs:
           
           echo "=== Подготовка конфигурации ==="
           
-          # Проверяем существование конфига
-          if [ ! -f "../builder/${{ env.CONFIG_FILE }}" ]; then
-            echo "::error::Конфигурационный файл ../builder/${{ env.CONFIG_FILE }} не найден"
-            ls -la ../builder/
-            exit 1
-          fi
+          mkdir -p files
+          cp -a ../builder/files/. ./files/
           
-          # Копируем файлы overlay если есть
-          if [ -d "../builder/files" ]; then
-            echo "Копируем файлы overlay..."
-            mkdir -p files
-            cp -a ../builder/files/. ./files/
+          # Update upgrade script with repository info
+          if [ -f ./files/usr/bin/upgrade_custom_openwrt ]; then
+            sed -i "s|XXXXXX/XXXXXX|${{ github.repository }}|" ./files/usr/bin/upgrade_custom_openwrt || true
+            chmod 755 ./files/usr/bin/upgrade_custom_openwrt
+            echo "✓ Updated upgrade script"
           fi
           
           # Копируем конфиг
@@ -276,22 +306,30 @@ jobs:
         run: |
           cd openwrt
           
-          echo "=== Загрузка исходников ==="
-          echo "Диск перед загрузкой:"
-          df -h .
+          echo "=== Downloading Sources ==="
           
-          # Последовательная загрузка для надежности
-          for attempt in {1..2}; do
-            echo "Попытка загрузки $attempt/2"
-            if make download -j2 V=s; then
-              echo "✓ Загрузка успешна"
-              break
-            elif [ $attempt -eq 2 ]; then
-              echo "::error::Не удалось загрузить исходники"
-              exit 1
-            fi
+          CORES=$(nproc)
+          DOWNLOAD_JOBS=$((CORES * 2))
+          echo "Using $DOWNLOAD_JOBS parallel jobs ($CORES cores available)"
+          
+          # Attempt 1: Parallel with 2x cores
+          if ! make download -j${DOWNLOAD_JOBS} V=s; then
+            echo "::warning::Parallel download failed, retrying with reduced parallelism"
             sleep 5
-          done
+            
+            # Attempt 2: Parallel with 1x cores
+            if ! make download -j${CORES} V=s; then
+              echo "::warning::Reduced parallel download failed, trying sequential"
+              sleep 10
+              
+              # Attempt 3: Sequential
+              if ! make download -j1 V=sc; then
+                echo "::error::All download attempts failed"
+                make download -j1 V=s 2>&1 | grep -E '(ERROR|Download failed)' || true
+                exit 1
+              fi
+            fi
+          fi
           
           echo "Размер dl директории:"
           du -sh dl/ || true
@@ -315,42 +353,43 @@ jobs:
           echo "Ядер: $(nproc)"
           free -h
           
-          # Адаптивный параллелизм
           CORES=$(nproc)
-          if [ $CORES -gt 4 ]; then
-            BUILD_JOBS=$((CORES - 2))
-          else
-            BUILD_JOBS=$CORES
-          fi
+          BUILD_JOBS=$((CORES + 1))
           
-          echo "Используем $BUILD_JOBS параллельных задач"
+          echo ""
+          echo "=== Starting Build ==="
+          echo "Build jobs: $BUILD_JOBS"
+          echo "CCACHE: $CCACHE_DIR"
+          echo ""
           
-          # Мониторинг диска в фоне
-          while sleep 300; do
-            echo "=== Мониторинг диска ==="
-            df -h . | tail -1
-          done &
-          MONITOR_PID=$!
-          
-          # Стратегия сборки с fallback
+          # Attempt 1: Parallel build
           if ! make -j${BUILD_JOBS} V=w; then
-            echo "::warning::Параллельная сборка не удалась, пробуем с меньшим параллелизмом"
+            echo "::warning::Parallel build failed, analyzing error"
+            df -h . | tail -1
             
-            # Очистка временных файлов
-            find build_dir -name "*.o" -delete 2>/dev/null || true
+            # Free up space
+            echo "Cleaning temporary files..."
+            rm -rf build_dir/target-*/root-* build_dir/target-*/linux-*/tmp/ 2>/dev/null || true
             
-            if ! make -j2 V=w; then
-              echo "::error::Сборка не удалась"
-              # Сохраняем логи для диагностики
-              echo "=== Последние логи ==="
-              tail -100 logs/*.log 2>/dev/null || true
-              kill $MONITOR_PID 2>/dev/null || true
-              exit 1
+            # Attempt 2: Reduced parallelism
+            echo "Retrying with $CORES jobs..."
+            if ! make -j${CORES} V=w; then
+              echo "::error::Reduced parallel build failed, trying single-threaded"
+              
+              # Attempt 3: Single-threaded with full verbosity
+              if ! make -j1 V=sc; then
+                echo "::error::Build failed completely"
+                echo "=== Build Log Tail ==="
+                tail -100 logs/* 2>/dev/null || true
+                exit 1
+              fi
             fi
           fi
           
-          kill $MONITOR_PID 2>/dev/null || true
-          echo "✓ Сборка завершена успешно"
+          echo ""
+          echo "=== Build Complete ==="
+          echo "Final disk:" && df -h . | tail -1
+          echo "Artifacts:" && du -sh bin/ 2>/dev/null || true
 
       # ===================================
       # 8. СОБИРАЕМ АРТЕФАКТЫ
@@ -628,12 +667,33 @@ jobs:
       # 10. ФИНАЛЬНАЯ СТАТИСТИКА
       # ===================================
       
-      - name: Final stats
+      - name: Cleanup build directory
         if: always()
         run: |
-          echo "=== Финальная статистика ==="
-          df -h
-          echo "Workflow завершен со статусом: ${{ job.status }}"
-          if [ -n "${{ steps.upstream.outputs.pr_number }}" ]; then
-            echo "Тестировался PR: #${{ steps.upstream.outputs.pr_number }}"
+          echo "=== Cleanup ==="
+          
+          if [ ! -d openwrt ]; then
+            echo "No openwrt directory to clean"
+            exit 0
           fi
+          
+          cd openwrt
+          
+          echo "Before cleanup:"
+          df -h . | tail -1
+          
+          # Remove temporary files but preserve caches
+          rm -rf build_dir/target-*/root-* 2>/dev/null || true
+          rm -rf build_dir/target-*/linux-*/tmp/ 2>/dev/null || true
+          rm -rf tmp/ logs/ 2>/dev/null || true
+          
+          # Clean staging except toolchain (cached separately)
+          find staging_dir -mindepth 1 -maxdepth 1 ! -name 'toolchain-*' -exec rm -rf {} + 2>/dev/null || true
+          
+          # Clean package build dirs but keep dl/ cache
+          find build_dir -type d -name 'ipkg-*' -exec rm -rf {} + 2>/dev/null || true
+          
+          echo "After cleanup:"
+          df -h . | tail -1
+          
+          echo "✓ Cleanup complete"
