--- a/.github/workflows/Default23.yml
+++ b/.github/workflows/Default23.yml
@@ -49,52 +49,47 @@ jobs:
       # 1. ОЧИСТКА И ПОДГОТОВКА СИСТЕМЫ
       # ===================================
       
-      - name: Free up disk space
+      - name: Cleanup workspace
         run: |
-          echo "=== Освобождение дискового пространства ==="
-          df -h
+          echo "=== Workspace Cleanup ==="
+          echo "Current directory: $PWD"
+          df -h . | tail -1
           
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf /usr/local/lib/android
-          sudo rm -rf /opt/hostedtoolcache/CodeQL
-          sudo apt-get clean
+          # Remove old build artifacts but preserve caches
+          rm -rf openwrt builder 2>/dev/null || true
+          find . -name '*.lock' -delete 2>/dev/null || true
           
-          echo "После очистки:"
-          df -h
+          echo "Disk space after cleanup:"
+          df -h . | tail -1
 
       - name: Checkout builder repository
         uses: actions/checkout@v4
         with:
           path: builder
 
-      - name: Install build dependencies
+      - name: Verify build dependencies
         run: |
-          echo "=== Установка зависимостей ==="
-          sudo apt-get update -qq
-          sudo apt-get install -y \
-            build-essential \
-            clang \
-            flex \
-            bison \
-            g++ \
-            gawk \
-            gettext \
-            git \
-            libncurses-dev \
-            libssl-dev \
-            python3 \
-            python3-setuptools \
-            rsync \
-            swig \
-            unzip \
-            zlib1g-dev \
-            file \
-            wget \
-            ccache \
-            libelf-dev \
-            upx-ucl
-
+          echo "=== Checking Build Dependencies ==="
+          missing=()
+          for cmd in git gcc g++ make gawk wget unzip python3 rsync flex bison swig ccache; do
+            command -v $cmd >/dev/null || missing+=("$cmd")
+          done
+          
+          if [ ${#missing[@]} -gt 0 ]; then
+            echo "Missing dependencies: ${missing[*]}"
+            if command -v apt >/dev/null 2>&1; then
+              echo "Installing dependencies via apt..."
+              sudo apt update -qq
+              sudo apt install -y build-essential clang flex bison g++ gawk gettext \
+                libncurses-dev libssl-dev python3-setuptools rsync swig unzip \
+                zlib1g-dev file wget llvm ccache
+            else
+              echo "::error::Missing dependencies and apt not available"
+              exit 1
+            fi
+          else
+            echo "✓ All required dependencies present"
+          fi
       # ===================================
       # 2. ПОЛУЧЕНИЕ ИСХОДНОГО КОДА OPENWRT
       # ===================================
